# ingestion-data-stores

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.adoc  cli.py  pyproject.toml  readme.md  requirements.txt
.github/: release-please-config.json
.github/workflows/: builder-docker-image-dockerhub.yml
cronjob/: crj-strimzi-events.yaml  crj_minio.yaml  crj_mongodb.yaml  crj_mssql.yaml  crj_mysql.yaml  crj_postgres.yaml  crj_strimzi_events.yaml  crj_ycql.yaml  crj_ysql.yaml
data_requests/: api_requests.py
datastore/storage/: stg_minio.py
datastore/yugabytedb/: ycql.py
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
objects/: movies.py
setup/: environment.yaml
