[tool.poetry]
name = "ingestion-data-stores"
version = "0.1.0"
description = ""
authors = ["Gerson <gersonrodriguessantos8@gmail.com>"]
readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"
pymssql = "^2.3.2"
sqlalchemy = "^2.0.37"
configparser = "^7.1.0"
pymysql = "^1.1.1"
pandas = "^2.2.3"
mongoengine = "^0.29.1"
pymongo = "^4.10.1"
numpy = "^2.2.2"
faker = "^33.3.1"
flask = "^3.1.0"
minio = "^7.2.15"
cassandra-driver = "^3.29.2"
confluent-kafka = "^2.8.0"
confluent-avro = "^1.8.0"
avro-python3 = "^1.10.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.12.0"}
flake8 = "^7.1.1"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-docker-tools = "^3.1.3"
pytest-helpers-namespace = "^2021.12.29"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  tests/ignore
  | profiling
  | plugins
  | data
  | .astro
  | .github
  | htmlcov
)/
'''
